--- a/nodes/embassy/Cargo.toml
+++ b/nodes/embassy/Cargo.toml
@@ -19,12 +19,15 @@ embassy-embedded-hal = { version = "0.3.0" }
 embassy-time = { version = "0.4", features = ["defmt",
 "defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
 embassy-futures = { version = "0.1.1"}
+embassy-usb = { version = "0.4.0", features = ["defmt"] }
 
 embedded-hal = "1.0.0"
 embedded-hal-async = "1.0"
 embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
+
+heapless = { git = "https://github.com/rust-embedded/heapless", version = "0.8", rev = "0ebca23", default-features = false }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
