adds button pannel, port of evavh buttonpanel

--- a/nodes/embassy/Cargo.toml
+++ b/nodes/embassy/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["bed-sb", "bed-lb", "sensors"]
+members = ["bed-sb", "bed-lb", "button-panel", "sensors", "usb-bridge-client"]
 
 [workspace.dependencies]
 protocol = { path = "../../crates/protocol" }
