--- a/nodes/embassy/button-panel/Cargo.toml
+++ b/nodes/embassy/button-panel/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "large-bedroom-sensor-node"
+name = "button-panel"
 version = "0.2.0"
-rust-version.workspace = true
-edition.workspace = true
+rust-version = "1.85"
+edition = "2024"
 license = "GPLv3"
 authors = ["David Kleingeld & Eva van Houten"]
 
@@ -13,11 +13,10 @@ cortex-m-rt.workspace = true
 embassy-stm32.workspace = true
 embassy-sync.workspace = true
 embassy-executor.workspace = true
-embassy-net.workspace = true
-embassy-net-wiznet.workspace = true
 embassy-embedded-hal.workspace = true
 embassy-time.workspace = true
 embassy-futures.workspace = true
+embassy-usb.workspace = true
 
 defmt.workspace = true
 defmt-rtt.workspace = true
@@ -29,12 +28,9 @@ embedded-io-async.workspace = true
 
 panic-probe.workspace = true
 futures.workspace = true
-static_cell = "2.0.0"
-rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
-heapless = { version = "0.8", default-features = false }
-
-# sensors
-sensors = { path = "../sensors" }
+heapless.workspace = true
 
 # encoding
 protocol = { workspace = true }
+
+usb-bridge-client = { path = "../usb-bridge-client" }
