--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -38,3 +38,4 @@ futures-concurrency = { workspace = true }
 strum = { version = "0.26.2", default-features = false, features = ["derive"] }
 dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
 color-eyre.workspace = true
+mpdrs = "0.1.0"
