--- a/nodes/embassy/Cargo.toml
+++ b/nodes/embassy/Cargo.toml
@@ -34,16 +34,27 @@ defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 [patch.crates-io]
-embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
-embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+# embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "fecb7a2" }
+
+embassy-stm32 = {path = "/home/david/Documents/embassy/embassy-stm32" }
+embassy-net = {path = "/home/david/Documents/embassy/embassy-net" }
+embassy-net-wiznet = {path = "/home/david/Documents/embassy/embassy-net-wiznet" }
+embassy-sync = {path = "/home/david/Documents/embassy/embassy-sync" }
+embassy-executor = {path = "/home/david/Documents/embassy/embassy-executor" }
+embassy-embedded-hal = {path = "/home/david/Documents/embassy/embassy-embedded-hal" }
+embassy-futures = {path = "/home/david/Documents/embassy/embassy-futures" }
+embassy-time = {path = "/home/david/Documents/embassy/embassy-time" }
+embassy-time-driver = {path = "/home/david/Documents/embassy/embassy-time-driver" }
+embassy-usb = {path = "/home/david/Documents/embassy/embassy-usb" }
 
 [workspace.package]
 rust-version = "1.78"
