--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,18 +17,25 @@ byteseries = { git = "https://github.com/dvdsk/byteseries", rev="a9da72e9585e5f5
 
 serde = { version = "1", features = ["derive"], default-features = false }
 tokio = { version = "1.38", features = ["rt-multi-thread"] }
+tokio-util = { version = "0.7.13", features = ["codec"] }
 itertools = { version = "0.14" }
-gethostname = "0.5.0"
+bincode = { version = "2.0", default-features = false, features = ["serde", "std"] }
+gethostname = "0.5"
 governor = "0.8"
 color-eyre = "0.6.3"
 tracing = "0.1.40"
-tracing-error = "0.2.0"
+tracing-error = "0.2"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures = "0.3.31"
 futures-concurrency = "7.6.2"
 jiff = "0.1"
 clap = { version = "4", features = ["derive"]} 
+rand = "0.9"
+smallvec = { version = "2.0.0-alpha.11" }
+strum = { version = "0.27", features = ["derive"] }
+ron = "0.9"
 thiserror = "2"
+reserve-port = "2.2.0"
 
 [workspace.package]
 rust-version = "1.82"
