--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -16,7 +16,7 @@ tokio = { workspace = true, features = ["full"] }
 
 serde.workspace = true
 serde_yaml = "0.9"
-bincode = "1.3"
+bincode.workspace = true
 
 thiserror.workspace = true
 
@@ -28,14 +28,14 @@ byteorder = "1.4"
 sled = "0.34"
 
 mpd = "0.1"
-rand = "0.8"
+rand.workspace = true
 
 futures-util = "0.3.30"
 tracing = {workspace = true}
 logger.workspace = true
 clap = { workspace = true }
 futures-concurrency = { workspace = true }
-strum = { version = "0.26.2", default-features = false, features = ["derive"] }
+strum.workspace = true
 dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
 color-eyre.workspace = true
 mpdrs = "0.1.0"
