--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -23,7 +23,7 @@ tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "io-util"
 thiserror.workspace = true
 futures.workspace = true
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
-tokio-util = { version = "0.7.11", features = ["codec"] }
+tokio-util.workspace = true
 serde.workspace = true
 futures-concurrency = { workspace = true }
 slotmap = "1.0.7"
