--- a/crates/text-widget/Cargo.toml
+++ b/crates/text-widget/Cargo.toml
@@ -21,7 +21,7 @@ logger.workspace = true
 tracing.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
-dirs = "5.0.1"
+dirs = "6.0"
 serde.workspace = true
 promptly = "0.3.1"
-ron = "0.8.1"
+ron.workspace = true
