--- a/crates/zigbee-bridge/Cargo.toml
+++ b/crates/zigbee-bridge/Cargo.toml
@@ -16,10 +16,10 @@ serde_json = "1.0.132"
 thiserror.workspace = true
 tokio = { workspace = true, features = ["sync"] }
 tracing = { workspace = true }
-strum = { version = "0.26.3", features = ["derive"] }
+strum.workspace = true
 color-eyre.workspace = true
 regex = "1.11.1"
-rand = "0.8.5"
+rand.workspace = true
 
 [dev-dependencies]
 logger.workspace = true
