--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ jiff = "0.1"
 clap = { version = "4", features = ["derive"]} 
 rand = "0.9"
 smallvec = { version = "2.0.0-alpha.11" }
-strum = { version = "0.27", features = ["derive"] }
+strum = { version = "0.27", default-features = false, features = ["derive"] }
 ron = "0.9"
 thiserror = "2"
 reserve-port = "2.2.0"
