--- a/nodes/esp32/airbox/Cargo.toml
+++ b/nodes/esp32/airbox/Cargo.toml
@@ -17,16 +17,16 @@ embedded-io-async = "0.6.1"
 esp-alloc = "0.7.0"
 esp-backtrace = { version = "0.15.1", features = [
   "defmt",
-  "esp32c3",
+  "esp32c6",
   "exception-handler",
   "panic-handler",
 ] }
 esp-hal = { version = "1.0.0-beta.0", features = [
   "defmt",
-  "esp32c3",
+  "esp32c6",
   "unstable",
 ] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c3"] }
+esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c6", "critical-section"] }
 smoltcp = { version = "0.12.0", default-features = false, features = [
   "medium-ethernet",
   "multicast",
@@ -48,12 +48,12 @@ embassy-executor = { version = "0.7.0", features = [
 embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
 embassy-sync = { version = "0.6.2" }
 embassy-futures = { version = "0.1.1" }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
+esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
 esp-wifi = { version = "0.13.0", features = [
   "builtin-scheduler",
   "defmt",
   "esp-alloc",
-  "esp32c3",
+  "esp32c6",
   "wifi",
 ] }
 heapless = { version = "0.8.0", default-features = false }
