--- a/nodes/embassy/test-wiznet/Cargo.toml
+++ b/nodes/embassy/test-wiznet/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "large-bedroom-sensor-node"
+name = "test-wiznet"
 version = "0.2.0"
 rust-version.workspace = true
 edition.workspace = true
@@ -11,30 +11,18 @@ cortex-m.workspace = true
 cortex-m-rt.workspace = true
 
 embassy-stm32.workspace = true
-embassy-sync.workspace = true
 embassy-executor.workspace = true
 embassy-net.workspace = true
 embassy-net-wiznet.workspace = true
-embassy-embedded-hal.workspace = true
 embassy-time.workspace = true
-embassy-futures.workspace = true
 
 defmt.workspace = true
 defmt-rtt.workspace = true
 
-embedded-hal.workspace = true
-embedded-hal-async.workspace = true
 embedded-hal-bus.workspace = true
 embedded-io-async.workspace = true
 
 panic-probe.workspace = true
-futures.workspace = true
 static_cell = "2.0.0"
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 heapless = { version = "0.8", default-features = false }
-
-# sensors
-sensors = { path = "../sensors" }
-
-# encoding
-protocol = { workspace = true }
