Add Tree::value_mut to get &mut Any for a Readings value
This works using a new IterMut enum/tree walk. It mirrors reading::Item
in having a Node and Leaf variant however the Leaf variant allows
mutable access via dyn Any.

Currently used for pir heartbeat checking. After having send active a
pir needs to keep sending active every 5 seconds or send inactive once.

data-server only forwards the initial active and will send status
Unknown if the heartbeat is missed.

--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -23,13 +23,14 @@ tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "io-util"
 thiserror.workspace = true
 futures.workspace = true
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
-tokio-util.workspace = true
+tokio-util = { workspace = true, features = ["time"] }
 serde.workspace = true
 futures-concurrency = { workspace = true }
 slotmap = "1.0.7"
 tracing-futures = "0.2.5"
 socket2 = { version = "0.6.0", features = ["all"] }
 governor.workspace = true
+tokio-utils = "0.1.2"
 
 [dev-dependencies]
 reserve-port = "2"
