--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -31,6 +31,7 @@ tracing = {workspace = true}
 logger.workspace = true
 clap = { workspace = true }
 futures-concurrency = { workspace = true }
-dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
+# dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
+dbstruct = { path = "/home/david/Documents/dbstruct" }
 color-eyre.workspace = true
 mpdrs = "0.1.0"
