--- a/crates/text-widget/Cargo.toml
+++ b/crates/text-widget/Cargo.toml
@@ -5,6 +5,7 @@ rust-version.workspace = true
 edition.workspace = true
 license.workspace = true
 authors.workspace = true
+description = "Widget for a desktop environment bar which displays sensor readings"
 
 [dependencies]
 clap.workspace = true
