--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "ui"
+version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 authors.workspace = true
+description = "A tui app for viewing data from and controlling the home automation system"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
